fix: properly restore z-index - #149

--- a/examples/demo.html
+++ b/examples/demo.html
@@ -51,7 +51,7 @@
     </div>
   </div>
 
-  <div class="sticky-box" style="position: absolute; top: 400px; left: 300px; background-color: red;" sticky>
+  <div class="sticky-box" style="position: absolute; top: 400px; left: 300px; background-color: red; z-index: 25" sticky>
     Style:<br>
     position: absolute;<br>
     left: 300px;<br>
