fix: properly restore style attributes when unsticking - #149

--- a/examples/demo.html
+++ b/examples/demo.html
@@ -27,6 +27,10 @@
     .clearfix {
       clear: both;
     }
+
+    .gray-sticky-box {
+      position: absolute; top: 600px; left: 600px; background-color: grey;
+    }
   </style>
 </head>
 
@@ -58,12 +62,13 @@
     top: 400px;
   </div>
 
-  <div class="sticky-box" style="position: absolute; top: 600px; left: 600px; background-color: grey;" sticky disabled-sticky="disableSticking">
+  <div class="sticky-box gray-sticky-box" sticky disabled-sticky="disableSticking">
     Optional Sticky<br>
-    Style:<br>
+    .gray-sticky-box {<br>
     position: absolute;<br>
     left: 600px;<br>
-    top: 600px;
+    top: 600px;<br>
+    }
     <button type="button" ng-click="disableSticking = !disableSticking" >Disable Sticking? {{ disableSticking }}</button>
   </div>
 
